Some logical changes but still errors not fixed

--- a/CypherTextEncryption.ipynb
+++ b/CypherTextEncryption.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 72,
    "id": "e926cd89",
    "metadata": {},
    "outputs": [],
@@ -20,9 +20,9 @@
     "\n",
     "        for i in self.text:\n",
     "            if i.isupper():\n",
-    "                encrypted_text += chr(ord(i)+self.key)\n",
+    "                encrypted_text += chr((ord(i)%ord('Z'))+self.key)\n",
     "            else:\n",
-    "                encrypted_text += chr(ord(i)+self.key)\n",
+    "                encrypted_text += chr((ord(i)%ord('z'))+self.key)\n",
     "        self.encrypted_message = encrypted_text\n",
     "\n",
     "    def validate(self):\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 73,
    "id": "10b719ad",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 74,
    "id": "81f3b5b2",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 75,
    "id": "4ea08aba",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 76,
    "id": "c8ce7e1b",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
        "'D[\\\\qvqgiq'"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
