Exercise 3.2 of LARDS

--- a/chapter3.ipynb
+++ b/chapter3.ipynb
@@ -58,12 +58,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "b0fd6bb5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lin_wght_combo = np.zeros(len(matrix_a))"
+    "lin_wght_combo = np.zeros(len(v1))"
    ]
   },
   {
@@ -113,13 +113,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "2ecf86c5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "    "
+    "# The user now asks what happens if there are more scalars then vector lets try"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "90a06118",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scalar_1 = [ 1, 5, -2 , 4 ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04b8346f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We will try to use the same vector matrix and try to do it again"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "84450f63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lin_weighted_matrix = np.zeros(len(v1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "ee8a9e44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i,j in zip(matrix_a,scalar_1):\n",
+    "    lin_weighted_matrix = i*j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "047142a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-10,  -4, -14])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lin_weighted_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "2bdb9ad5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using zip() as above works, because zip() will use only the minimum-matching items.\n",
+    "# Re-writing the code using indexing will cause an error, as in the code below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "2c64be18",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(scalar_1)):\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     lin_weighted_matrix = scalar_1[i]*\u001b[43mmatrix_a\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\n",
+      "\u001b[31mIndexError\u001b[39m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(scalar_1)):\n",
+    "    lin_weighted_matrix = scalar_1[i]*matrix_a[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "3ecba995",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This of course doesnt work work because if you look closely the shapes of both wont match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa44d1d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1,4 and 3,3 cant create a matrix , why ?\n",
+    "# Because for any calculation we need j no of columnd of left matrix and i no of rows of a right matrix must be equal."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d9c7a2c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
